update: minor changes

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
                 <!-- Web Development Item -->
                 <div
-                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#03C988]"
+                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#FF6500]"
                 >
                   <!-- Icon on the left -->
                   <svg
@@ -629,7 +629,7 @@
 
                 <!-- Backend Development Item -->
                 <div
-                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#03C988]"
+                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#FF6500]"
                 >
                   <!-- Icon on the left -->
                   <svg
@@ -677,7 +677,7 @@
 
                 <!-- POS Development Item -->
                 <div
-                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#03C988]"
+                  class="min-[600px]:flex p-4 min-[600px]:p-8 bg-[#1A1A1D] rounded-xl border border-[#FF6500]"
                 >
                   <!-- Icon on the left -->
                   <svg
