update: add favico

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Alastier Catayoc</title>
+    <link
+      rel="icon"
+      href="https://drive.google.com/thumbnail?id=1_NvWV0hY8YngDyfB7HL6sdriy9osVCtJ"
+    />
     <style>
       /* Styling for Webkit browsers (Chrome, Safari, Edge, etc.) */
       .scrollbar-custom-main::-webkit-scrollbar {
